--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-timer-hook": "^3.0.7",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
