--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-lottie": "^1.2.4",
     "react-redux": "^9.1.2",
