--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-charts": "^7.11.1",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
