--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@mui/x-charts": "^7.11.1",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
