--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "canvas-confetti": "^1.9.3",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
