--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-timer-hook": "^3.0.7",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
     "uuid": "^10.0.0"
   },
