--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.5.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.7.5"
   }
 }
