--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,13 @@
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.11.1",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "canvas-confetti": "^1.9.3",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
